@@ -1,3 +1,4 @@
+- Changed the calendar import success message to an info dialog instead of warning.
 - Files: Added username, musername ans locked by to file properties dialog
 - Zpushadmin: Fixed notice error with defining version file multiple times
 - Removed row limit from visible groups in the User dialog's permissions tab
